# agentic-project-init

./: .gitignore  AGENTS.md  DESIGN.md  DESIGN_REVIEW.md  DESIGN_v1.md  IMPLEMENTATION_PLAN.md  PROMPT_build.md  PROMPT_plan.md  README.md  loop.sh  pyproject.toml
.claude/: agents  commands  hooks  settings.json
.project/: CURRENT_WORK.md  EPIC_GUIDE.md  epic_template.md
.project/active/: README.md
.project/adr/: 0001-decision-records-convention.md  0002-adr-touch-points.md  INDEX.md  README.md
.project/backlog/: BACKLOG.md  README.md  epic_workflow_v2.md
.project/completed/: 20251230_epic_init_strategy.md  20260701_epic_workflow_v2.md  CHANGELOG.md
.project/concepts/: project-dashboard-and-management-upgrade.md
.project/reports/: README.md
.project/research/: 20260109-095026_simplified-symlink-setup.md  20260109-100205_user-level-claude-symlink-alternative.md  20260111-mobile-claude-code-access.md  20260418-083015_codex-cli-compatibility-mapping.md  20260419-081514_artifact-pipeline-alignment-review.md
.project/scripts/: adr.sh  get-metadata.sh
claude-pack/: claude-md-checklist.md
claude-pack/agents/: example-agent.md  recall.md
claude-pack/commands/: _my_allow_tool.md  _my_audit.md  _my_audit_implementation.md  _my_capture.md  _my_close.md  _my_code_quality.md  _my_code_review.md  _my_concept.md  _my_concept_design.md  _my_design.md  _my_design_review.md  _my_epic_plan.md  _my_git_manage.md  _my_handoff.md  _my_implement.md  _my_learning_test.md  _my_memorize.md  _my_orchestrate.md  _my_pipeline.md  _my_plan.md  _my_pre_pr.md  _my_product_design.md  _my_project_find.md  _my_project_manage.md  (+26 more)
codex-overrides/: config.sh
comment-system/: README.md  pyproject.toml
comment-system/specs/: anchor-reconciliation.md  cli-interface.md  concurrency.md  data-model.md  decision-log.md  file-operations.md  file-tracking.md  fuzzy-matching.md  mcp-tools.md  orchestration.md  vscode-extension.md
comment-system/src/comment_system/: __init__.py  anchors.py  cli.py  decisions.py  fuzzy.py  git_ops.py  locking.py  mcp_server.py  models.py  storage.py
comment-system/tests/comment_system/: test_anchors.py  test_anchors_performance.py  test_cli.py  test_decisions.py  test_fuzzy.py  test_fuzzy_performance.py  test_git_ops.py  test_locking.py  test_mcp_server.py  test_models.py  test_orchestration_scripts.py  test_storage.py  test_storage_performance.py
comment-system/vscode-extension/: README.md  file-native-comments-0.1.0.vsix
docs/: DASHBOARD.md  FRONTMATTER_SCHEMA.md  LIFECYCLE_SCRIPTS.md  REGISTRY_SCHEMA.md  STRUCTURE.md  guide.md  working-with-claude.md
project-pack/: CURRENT_WORK.md  EPIC_GUIDE.md  README.md  epic_template.md
scripts/: build-codex-pack.sh  init-project.sh  setup-codex.sh  setup-comments.sh  setup-global.sh  test_adr.sh  test_codex_orchestrator_pack.sh  test_docs.sh  test_global_setup.sh  test_init_project.sh  test_pipeline_sync.sh  test_rename.sh  test_uninstall.sh  uninstall-global.sh  uninstall-project.sh  update-templates.sh
specs/: 01-work-item-identity.md  02-registry-data-model.md  03-yaml-frontmatter-schema.md  04-lifecycle-scripts.md  05-reconciliation.md  06-dashboard-generation.md  07-file-watcher.md  08-command-integration.md  09-atomic-writes.md  10-backlog-item-handling.md  _raw_output.md
src/: __init__.py
tests/: __init__.py  test_atomic_write.py  test_frontmatter.py  test_generate_dashboard.py  test_logging.py  test_move_item.py  test_reconcile_registry.py  test_register_item.py  test_registry.py  test_slug.py  test_update_artifact.py  test_watch_project.py
(+156 files in other folders)
