[project]
name = "dashboard-system"
version = "0.1.0"
description = "Dashboard system for project management"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "watchdog>=4.0.0",
]

[project.scripts]
register-item = "src.scripts.register_item:main"
move-item = "src.scripts.move_item:main"
update-artifact = "src.scripts.update_artifact:main"
reconcile-registry = "src.scripts.reconcile_registry:main"
generate-dashboard = "src.scripts.generate_dashboard:main"
watch-project = "src.scripts.watch_project:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "types-PyYAML>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []
