[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "file-native-comments"
version = "0.1.0"
description = "File-native threaded comment system for code review"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "ulid-py>=1.1.0",
    "click>=8.0",
    "mcp>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=1.3.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.scripts]
comment = "comment_system.cli:cli"
comment-mcp = "comment_system.mcp_server:run_server"

[tool.hatch.build.targets.wheel]
packages = ["src/comment_system"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["comment_system"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/comment_system"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=1.3.0",
    "mypy>=1.0",
    "ruff>=0.1",
]
